bug 191871: fayt stops working after Alt+F C. r+sr=jst